<resources>
    <string name="app_name">TeenSecure</string>
    <string name="welcome_text">Welcome</string>
    <string name="start_text">Start</string>
    <string name="about_btn_label">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_model_label">Game Model</string>
    <string name="game_model_text">The Game is a 3-levelled awareness game. With each level a prerequisite before the next.\nEach level contains;\n\ni. Learning Content \nii. Practice Questions \n\n• The questions in each of the levels are of different form which include; Multiple Choice Questions (MCQs), True or False, Scenario-Based Questions, Matching Questions, Visual Questions and
        Multiple-Answer Questions \n\n• Questions has a reward in form of mark. With 70% as pass mark before the player can proceed to the next level. Once the player got the pass mark. He/she will be rewarded with certain amount, in which will be used to perform the tasks of the quest at that level. Failure to get the pass mark will make the player to repeat the level.</string>
    <string name="istruction_text">Before you begin your journey, choose the path you wish to explore. Each path offers a unique learning experience and challenges. Select wisely!</string>
    <string name="teen_secure">Teen Secure</string>
    <string name="ransom_wrangler">Ransom Wrangler</string>
    <string name="tips">Tips:</string>
    <string name="rw_level_5_text">Level 5: Expert Level (Locked)</string>
    <string name="welcome_rw">Welcome to Ransom Wrangler</string>
    <string name="rw_welcome_message">In this section, you’ll embark on a journey to master ransomware awareness and cybersecurity. To proceed, you must successfully pass each level before unlocking the next.</string>
    <string name="rw_level_1_text">Start Level 1: Basic Awareness</string>
    <string name="rw_level_2_text">Level 2: Intermediate Knowledge (Locked)</string>
    <string name="rw_level_3_text">Level 3: Advanced Understanding (Locked)</string>
    <string name="rw_level_4_text">Level 4: Proficient Knowledge (Locked)</string>
    <string name="test_your_knowledge_btn_text">Test Your Knowledge</string>
    <string name="your_score_txt">Your Score</string>
    <string name="next_btn_text">Next</string>
    <string name="submit_btn_text">Submit</string>
    <string name="default_current_quiz_no">1</string>
    <string name="congratulations">Congratulations!</string>
    <string name="course_completed">You have completed the course:</string>
    <string name="motivation">\"When we are motivated by goals that have deep meaning, by dreams that need completion, by pure love that needs expressing, then we truly live life\"</string>
    <string name="about_app">About</string>
    <string name="profile">My Profile</string>
    <string name="btn_previous_text">Previous</string>
</resources>